# guizhou-tender-daily

./: .env.example  .gitignore  AGENTS.md  README.md  index.html  pyproject.toml
.github/workflows/: daily-pages.yml
assets/: app.js  style.css
config/: construction_sources.json  excluded_notices.json  feedback_rules.json  graphic_sources.json  priority_projects.json  regions.json  source_names.json  verified_notices.json
config/industries/: construction.json  graphic-advertising.json  landscaping.json
construction/: index.html
construction/assets/: app.js  style.css
construction/data/: collector-state.json  latest.json  ztb-state.json
data/: csg-state.json  feedback-state.json  ggzy-state.json  latest.json  state.json  tobacco-state.json  ygzc-state.json
deploy/: daily-collect.sh
docs/: OPERATIONS.md
opportunities/: index.html
opportunities/assets/: app.js
opportunities/data/: manifest.json  matches.json  run-status.json
scripts/: add_zunyibus_source.mjs
site/: 404.html  index.html
site/assets/: app.js  style.css
site/data/: csg-state.json  feedback-state.json  ggzy-state.json  latest.json  state.json  tobacco-state.json  ygzc-state.json
tests/: test_construction.py  test_construction_document_review_ui.py  test_csg.py  test_digest.py  test_eqyzc.py  test_feedback.py  test_ggzy_graphic.py  test_importers.py  test_multi_source_collectors.py  test_normalize.py  test_priority_watch.py  test_public_export.py  test_site_filters.py  test_tobacco.py  test_ygzc.py  test_zunyi_bus.py
tests_unified/: test_unified_site.py
(+61 files in other folders)
